--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ Flask-SQLAlchemy
 Flask-Migrate
 Flask-Login
 psycopg2
-
+Flask_script
 # ----------------------
 # Production Server
 # ----------------------
